# c-study

./: .gitattributes  .gitignore  README.md
.github/workflows/: pages.yml
book/: book.toml
book/src/: README.md  SUMMARY.md
book/src/入门/: 数据结构总览.md  第0.5章-C语言开发环境与工具.md  第一章-C语言核心基础语法.md  第七章-指针.md  第三章-数组.md  第九章-函数指针.md  第二十章-C语言语法和概念常见问题逐一剖析.md  第二章-关于类型和变量-我还想说这些.md  第五章-结构体.md  第八章-结构体指针.md  第六章-C语言的内存模型.md  第十一章-指针和数组的关系.md  第十七章-C语言统一项目构建系统-CMake初识.md  第十三章-共用体与枚举.md  第十九章-通用抽象数据结构.md  第十二章-生命周期.md  第十五章-文件IO.md  第十八章-数据存储结构.md  第十六章-C语言头文件与代码文件组织.md  第十四章-宏.md  第十章-堆内存使用-内存分配.md  第四章-字符串.md  第零章-计算机和编程最基础概念扫盲.md
book/src/进阶/: README.md
src/: README.md
src/ch01-basics/: 00_snippets.c  01_hello_world.c  02_program_skeleton.c  03_first_program.c  04_comments_practice.c  05_variables_practice.c  06_operators_practice.c  07_if_demo.c  08_if_else_demo.c  09_grade_scoring.c  10_nested_if.c  11_number_classify.c  12_while_loop.c  13_do_while.c  14_for_loop.c  15_break_demo.c  16_continue_demo.c  17_loops_practice.c  18_square_function.c  19_getmax_function.c  20_forward_declaration.c  21_functions_practice.c  22_math_header.c  23_random_number.c  24_scanf_demo.c  25_simple_calculator.c  26_guessing_game.c
src/ch02-types/: 01_const_and_cast.c
src/ch03-arrays/: 00_snippets.c  01_array_access.c  02_array_traversal.c  03_sum_average.c  04_array_input.c  05_out_of_bounds.c  06_find_max_min.c  07_2d_array_access.c  08_2d_array_traversal.c  09_student_scores.c  10_arrays_practice.c
src/ch04-strings/: 00_snippets.c  01_printf_string.c  02_scanf_string.c  03_fgets_input.c  04_strlen_demo.c  05_strcmp_demo.c  06_string_array.c  07_remove_newline.c  08_strings_practice.c
src/ch05-structs/: 00_snippets.c  01_struct_init.c  02_dot_operator.c  03_struct_array.c  04_struct_to_function.c  05_struct_return.c  06_strcpy_member.c  07_nested_struct.c  08_structs_practice.c
src/ch06-memory/: 00_snippets.c  01_stack_variables.c  02_global_variable.c  03_static_local.c  04_print_addresses.c  05_address_comparison.c  06_memory_practice.c
src/ch07-pointers/: 00_snippets.c  01_dereference.c  02_pointers_practice.c
src/ch08-struct-pointers/: 00_snippets.c  01_arrow_operator.c  02_ptr_traverse_struct.c  03_struct_ptr_practice.c
src/ch09-function-pointers/: 00_snippets.c  01_func_ptr_basic.c  02_func_ptr_assign.c  03_foreach_callback.c  04_qsort_callback.c  05_func_ptr_practice.c
src/ch10-heap/: 00_snippets.c  01_malloc_array.c  02_calloc_demo.c  03_realloc_demo.c  04_dynamic_struct.c  05_heap_practice.c
src/ch11-pointer-arrays/: 00_snippets.c  01_three_traversals.c  02_ptr_array_practice.c
src/ch12-lifetime/: 01_storage_duration.c
src/ch13-union-enum/: 00_snippets.c  01_union_demo.c  02_union_bytes.c  03_enum_demo.c  04_union_enum_practice.c
src/ch14-macros/: 01_macro_safety.c
src/ch15-file-io/: 00_snippets.c  01_fgetc_fputc.c  02_fgets_lineno.c  03_fprintf_fscanf.c  04_fwrite_fread.c  05_file_size.c  06_wc_demo.c
src/ch16-headers/: 00_main_with_calc.c  01_multi_file_demo.c
src/ch16-headers/include/: calc.h  mathutils.h
src/ch16-headers/src/: calc.c  main.c  mathutils.c
src/ch17-cmake/: 00_cmake_explanation.c  CMakeLists.txt
src/ch17-cmake/include/: strtools.h
src/ch17-cmake/src/: main.c  strtools.c
src/ch18-data-structures/array-operations/: CMakeLists.txt
src/ch18-data-structures/array-operations/include/: array_operations.h
src/ch18-data-structures/array-operations/src/: array_operations.c  main.c
src/ch18-data-structures/array-stack/: CMakeLists.txt
src/ch18-data-structures/array-stack/include/: array_stack.h
src/ch18-data-structures/array-stack/src/: array_stack.c  main.c
src/ch18-data-structures/circular-queue/: CMakeLists.txt
src/ch18-data-structures/circular-queue/include/: circular_queue.h
src/ch18-data-structures/circular-queue/src/: circular_queue.c  main.c
src/ch18-data-structures/doubly-linked-list/: CMakeLists.txt
src/ch18-data-structures/doubly-linked-list/include/: doubly_linked_list.h
src/ch18-data-structures/doubly-linked-list/src/: doubly_linked_list.c  main.c
src/ch18-data-structures/linked-queue/: CMakeLists.txt
src/ch18-data-structures/linked-queue/include/: linked_queue.h
src/ch18-data-structures/linked-queue/src/: linked_queue.c  main.c
src/ch18-data-structures/singly-linked-list/: CMakeLists.txt
src/ch18-data-structures/singly-linked-list/include/: singly_linked_list.h
src/ch18-data-structures/singly-linked-list/src/: main.c  singly_linked_list.c
